src/pages/TISC/Adminstration/Documentation/HowTo/index.less
.howto_container {
  :global(.ant-tabs-nav-wrap) {
    background: #fff;
  }

  :global(.ant-tabs-top > .ant-tabs-nav) {
    margin-bottom: 0;
  }

  :global(.tab-list .ant-tabs-top > .ant-tabs-nav::before) {
    border-bottom: none;
  }

  :global(.ant-tabs > .ant-tabs-nav .ant-tabs-nav-list) {
    overflow: hidden !important;
  }

  :global(.ant-tabs-tab) {
    width: 125px;
    @media screen and (max-width: 400px) {
      flex: 1;
      width: auto;
    }
  }
}

